# platformer

./: .gitignore  Cargo.toml  index.html  settings.ron
.github/workflows/: release.yaml
assets/levels/: World.ldtk
assets/sprites/: baby_jake.aseprite  baby_jake_2.aseprite  door.aseprite  main_title.aseprite  pause_menu.aseprite  sam1.aseprite  tilemap.aseprite  victory.aseprite  wheat.aseprite
src/: actor.rs  camera.rs  door.rs  lib.rs  loading.rs  main.rs  pickup.rs  player.rs  sprite_anim.rs  ui_events.rs  world.rs
src/actions/: game_control.rs  mod.rs
